--- a/data/index.html
+++ b/data/index.html
@@ -3174,6 +3174,7 @@
 				byClass("wifi")[0].innerHTML = RSSIIcon;
 				var x = byClass("pure-u-1-1 pure-u-md-1-2 pure-u-xl-1-4 temp_index");
 				var i;
+				var ch_count = 0;
 				for (i = 0; i < x.length; i++) {
 					x[i].getElementsByClassName('1-box channel')[0].style.borderColor = jr.channel[i].color;
 					x[i].getElementsByClassName('chtitle')[0].innerHTML = jr.channel[i].name;
@@ -3202,10 +3203,13 @@
 					x[i].getElementsByClassName('tempmin')[0].innerHTML = getIcon('temp_down') + jr.channel[i].min + "°";
 					x[i].getElementsByClassName('tempmax')[0].innerHTML = getIcon('temp_up') + jr.channel[i].max + "°";
 					if (jr.channel[i].temp == '999'){
+						x[i].style.display = 'none';
 						x[i].getElementsByClassName('temp')[0].innerHTML = 'OFF';
 						x[i].getElementsByClassName('temp')[0].style.color = "#FFFFFF";		
 						x[i].getElementsByClassName('temp')[0].style.fontWeight = 'normal';
 					}else{
+						ch_count++;
+						x[i].style.display = 'inline';
 						x[i].getElementsByClassName('temp')[0].innerHTML = jr.channel[i].temp.toFixed(1) + "°" + jr.system.unit;
 						if (jr.channel[i].temp < jr.channel[i].min){
 							x[i].getElementsByClassName('temp')[0].style.color = "#1874cd";
@@ -3217,6 +3221,11 @@
 							x[i].getElementsByClassName('temp')[0].style.color = "#FFFFFF";
 							x[i].getElementsByClassName('temp')[0].style.fontWeight = 'normal';
 						}
+					}
+				}
+				if (ch_count == 0){
+					for (i = 0; i < x.length; i++) {
+						x[i].style.display = 'inline';
 					}
 				}
 			})
