--- a/data/index.html
+++ b/data/index.html
@@ -3398,206 +3398,14 @@
 	  var time = date + ' ' + month + ' ' + year + ' ' + hour + ':' + min + ':' + sec ;
 	  return time;
 	}	
-	
-	function chartReady(){
-		chartPluginReady = true;
-		var nanoChart = new Chart(myContext, myChartConfig);  
+		
+	function chartReady(){  
+		chartPluginReady = true;		
 		byId('chart').style.display = 'inline'
 	}
-
-	Chart.defaults.global.animationSteps = 50;
-	Chart.defaults.global.tooltipYPadding = 16;
-	Chart.defaults.global.tooltipCornerRadius = 0;
-	Chart.defaults.global.defaultFontColor= 'white';
-	Chart.defaults.global.tooltipTitleFontStyle = "normal";
-	Chart.defaults.global.tooltips.mode = "index";
-	Chart.defaults.global.tooltips.intersect = false;
-	Chart.defaults.global.legend.labels.boxWidth = 15;
-	//Chart.defaults.global.tooltipFillColor = "rgba(0,160,0,0.8)";
-	Chart.defaults.global.animationEasing = "easeOutBounce";
-	Chart.defaults.global.responsive = true;
-	//Chart.defaults.global.scaleLineColor = "black";
-	Chart.defaults.global.scaleFontSize = 16;
-    var myContext = document.getElementById("nanoChart");
-    var myChartConfig = {
-      type: 'line',
-      data: {
-        labels: [],
-        datasets: [
-           {
-			   label: "#1",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',           
-			   data: []
-           },{
-			   label: "#2",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',
-			   data: []
-           },{
-			   label: "#3",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',
-			   data: []
-           },{
-			   label: "#4",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',
-			   data: []
-           },{
-			   label: "#5",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',
-			   data: []
-           },{
-			   label: "#6",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',
-			   data: []
-           },{
-			   label: "#7",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',
-			   data: []
-           },{
-			   label: "#8",
-			   yAxisID: "A",
-			   radius: 0,
-			   borderColor: 'white',
-			   data: []
-           },{
-			   label: "PID set",
-			   yAxisID: "A",
-			   radius: 0,
-			   lineTension: 0,
-			   borderColor: 'red',
-			   borderDash: [10,5],
-			   data: []
-           },{
-			   label: "PID val",
-			   yAxisID: "B", 
-			   radius: 0,
-			   lineTension: 0,
-			   borderColor: 'rgba(0, 0, 0, 0.2)',
-			   borderWidth: 1,
-			   data: []
-           }
-        ]
-      },
-	  options:{
-		scales:{
-			xAxes:[{
-			type: 'time',
-				time: {
-				  displayFormats: {
-					'millisecond': 'k:mm:ss',
-					'second': 'k:mm:ss',
-					'minute': 'k:mm:ss',
-					'hour': 'k:mm:ss',
-					'day': 'k:mm:ss',
-					'week': 'k:mm:ss',
-					'month': 'k:mm:ss',
-					'quarter': 'k:mm:ss',
-					'year': 'k:mm:ss',
-				  }
-				},
-				ticks:{
-					autoSkip: true,
-					maxTicksLimit: 10
-				}
-			}],
-			yAxes:[{
-					id: 'A',
-					position: 'right',
-					ticks:{
-						userCallback: function(label, index, labels) {
-							return label.toFixed(1) + '°' + unit;
-						}
-					}
-				},{
-					id: 'B',
-					position: 'left',
-					ticks:{
-						min: 0,
-						max: 100,
-						userCallback: function(label, index, labels) {
-							return label + '%';
-						}
-					}
-				},
-
-			]		
-		},
-		tooltips: {
-            enabled: true,
-            callbacks: {
-                label: function(tooltipItems, data) { 
-					if(tooltipItems.datasetIndex == '9'){
-						return tooltipItems.yLabel + '%' + ' - ' + ch_name[tooltipItems.datasetIndex];
-					}else{
-						return tooltipItems.yLabel + '°' + unit + ' - ' + ch_name[tooltipItems.datasetIndex];
-					} 
-                }
-            }
-        }
-	  }
-	};
- 
-	function loadChartData(){
-		loadJSON(api_data_test, '', '10000', function (response_1) {
-			if (response_1 == 'false'){
-				alert('ACHTUNG! Es wurden keine Daten am Server gefunden!');
-				window.location = "http://www.wlanthermo.de/";
-			}
-			var response = response_1.split(";");
-			for (var i = 0; i < response.length -1; i++) {			
-				jr = JSON.parse(response[i]);
-				if(chart_ts != jr.system.time){
-					addData(timeConverter(jr.system.time),jr,false);
-					chart_ts = jr.system.time;
-				}	
-			}
-			pit_act = true;
-			readTemp();		
-		})
-	}  
-  
-	function addData(timestamp,jr,update){
-		nanoChart.data.labels.push(timestamp);
-		var i;
-		for (i = 0; i < jr.channel.length; i++) {
-			nanoChart.data.datasets[i].borderColor = jr.channel[i].color;
-			nanoChart.data.datasets[i].backgroundColor = jr.channel[i].color;
-			nanoChart.data.datasets[i].fill = false;
-			if (jr.channel[i].temp == '999'){
-			//nanoChart.data.datasets[i].showLine = false;
-				nanoChart.data.datasets[i].data.push(null);
-			}else{
-				//nanoChart.data.datasets[i].showLine = true;
-				nanoChart.data.datasets[i].data.push(jr.channel[i].temp.toFixed(1) );
-			}
-		}
-		nanoChart.data.datasets[8].fill = false;
-		if(jr.pitmaster.typ == 'off'){
-			nanoChart.data.datasets[8].data.push(null);
-			nanoChart.data.datasets[9].data.push(null);	
-		}else{
-			nanoChart.data.datasets[8].data.push(jr.pitmaster.set);
-			nanoChart.data.datasets[9].data.push(jr.pitmaster.value);	
-		}
-		if(update === true){
-			nanoChart.update();	
-		}
-	}	
+ 	
 	readTemp();
 </script>
-<script async src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js" onload="chartReady()"></script>
+<script async src="http://cloud.wlanthermo.de/chart.js" onload="chartReady()"></script>
 </body>
 </html>
