--- a/data/index.html
+++ b/data/index.html
@@ -3241,6 +3241,9 @@
 					}
 				}
 				if(chart_ts != jr.system.time && chartPluginReady === true){
+					if(jr.system.time <= '1483228800'){
+						jr.system.time = Date.now();
+					}
 					addData(timeConverter(jr.system.time),jr,true);
 					chart_ts = jr.system.time;
 				}
@@ -3403,7 +3406,7 @@
 		chartPluginReady = true;		
 		byId('chart').style.display = 'inline'
 	}
- 	
+
 	readTemp();
 </script>
 <script async src="http://cloud.wlanthermo.de/chart.js" onload="chartReady()"></script>
