--- a/data/index.html
+++ b/data/index.html
@@ -2466,6 +2466,8 @@
 							  <input type="text" class="temp_input" id="TGid" maxlength="30" required="required"/>
 							  <label class="control-label" for="input">Chat ID</label><i class="bar"></i>
 							</div>
+							<hr />
+							<p class="pure-button pure-button-primary" onclick="sendPushNotification();">Testnachricht senden</p>
 							<!-- <a class="pure-button" href="" onclick="getChatID();">A Pure Button</a> -->
 							<!-- <p class="pure-button pure-button-primary" onclick="getChatID();">ChatID ermitteln</p> -->
 							<!-- <button class="" onSubmit="return false;">A Primary Button</button>														 -->
@@ -2695,7 +2697,10 @@
 			})		
 		})
 	}
-	
+
+	function sendPushNotification(){
+
+	}
 	function showSetWLAN(){
 		hideAll();
 		byId('wlan_set').style.display = "inline";
