--- a/data/index.html
+++ b/data/index.html
@@ -2448,23 +2448,23 @@
 				  <td><span onclick="setPushNotification();">Speichern<span class="icon-arrow_right"></span></span></td>
 				</tr>
 			</table>
-			<h3 class="headtitle">Telegram</h3>
+			<h3 class="headtitle">Push Einstellungen</h3>
 			<div class="pure-g">
 				<div class="pure-u-1-1 pure-u-lg-1-1">
 					<div class="1-box channel_conf">
 						<form>	
 							<div class="checkbox">
 							  <label>
-								<input id="TGon" type="checkbox" checked="checked"/><i class="helper"></i>Telegram aktivieren
+								<input id="TGon" type="checkbox" checked="checked"/><i class="helper"></i>Push-Dienst aktivieren
 							  </label>
 							</div>						
 							<div class="form-group">
 							  <input type="text" class="temp_input" id="TGtoken" maxlength="50" required="required"/>
-							  <label class="control-label" for="input">Token</label><i class="bar"></i>
+							  <label class="control-label" for="input">API Token/Key</label><i class="bar"></i>
 							</div>
 							<div class="form-group">
 							  <input type="text" class="temp_input" id="TGid" maxlength="30" required="required"/>
-							  <label class="control-label" for="input">Chat ID</label><i class="bar"></i>
+							  <label class="control-label" for="input">Chat ID / User Key</label><i class="bar"></i>
 							</div>
 							<p class="pure-button pure-button-primary" onclick="sendPushNotification();">Testnachricht senden</p>
 							<!-- <a class="pure-button" href="" onclick="getChatID();">A Pure Button</a> -->
