--- a/data/index.html
+++ b/data/index.html
@@ -2039,7 +2039,7 @@
 									<option value="off">off</option>
 									<option value="auto">auto</option>
 									<option value="manual">manual</option>
-									<option disabled value="autotune">autotune</option>
+									<option value="autotune">autotune</option>
 								</select>
 								<label class="control-label" for="select">Pitmaster</label><i class="bar"></i>
 							</div>
@@ -2328,116 +2328,112 @@
 						</form>
 					</div>
 				</div>
-			</div>		
-			<div id="thingsheader">
-				<h3 class="headtitle">Thingspeak</h3>
-				<div class="pure-g">
-					<div class="pure-u-1-1 pure-u-lg-1-1">
-						<div class="1-box channel_conf">
-							<form>							
-							  <div class="checkbox">
-							    <label>
-								  <input id="TSon" type="checkbox" checked="checked"/><i class="helper"></i>Thingspeak aktivieren
-							    </label>
-							  </div>
-							  <div class="form-group">
-							    <input type="text" id="TSwrite" maxlength="26" required="required"/>
-							    <label class="control-label" for="input">Channel Write API Key</label><i class="bar"></i>
-							  </div>
-							  <div class="form-group">
-							    <input type="text" id="TShttp" maxlength="26" required="required"/>
-							    <label class="control-label" for="input">ThingHTTP API Key</label><i class="bar"></i>
-							  </div>
-							  <div class="form-group">
-							    <input type="text" id="TSchID" maxlength="26" required="required"/>
-							    <label class="control-label" for="input">Channel ID</label><i class="bar"></i>
-							  </div>
-							  <div class="form-group">
-							    <select id="TSinterval">
-								  <option value="30">30 Sekunden</option>
-								  <option value="60">1 Minute</option>
-								  <option value="120">2 Minuten</option>
-								  <option value="300">5 Minuten</option>
-							    </select>
-							    <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
-							  </div>
-							  <div class="checkbox">
-							    <label>
-								  <input id="TSshow8" type="checkbox" checked="checked"/><i class="helper"></i>Batterieladezustand anstatt CH8
-							    </label>
-							  </div>
-							</form>
-						</div>
+			</div>			
+			<h3 class="headtitle">Thingspeak</h3>
+			<div class="pure-g">
+				<div class="pure-u-1-1 pure-u-lg-1-1">
+					<div class="1-box channel_conf">
+						<form>							
+							<div class="checkbox">
+							  <label>
+								<input id="TSon" type="checkbox" checked="checked"/><i class="helper"></i>Thingspeak aktivieren
+							  </label>
+							</div>
+							<div class="form-group">
+							  <input type="text" id="TSwrite" maxlength="26" required="required"/>
+							  <label class="control-label" for="input">Channel Write API Key</label><i class="bar"></i>
+							</div>
+							<div class="form-group">
+							  <input type="text" id="TShttp" maxlength="26" required="required"/>
+							  <label class="control-label" for="input">ThingHTTP API Key</label><i class="bar"></i>
+							</div>
+							<div class="form-group">
+							  <input type="text" id="TSchID" maxlength="26" required="required"/>
+							  <label class="control-label" for="input">Channel ID</label><i class="bar"></i>
+							</div>
+							<div class="form-group">
+							  <select id="TSinterval">
+								<option value="30">30 Sekunden</option>
+								<option value="60">1 Minute</option>
+								<option value="120">2 Minuten</option>
+								<option value="300">5 Minuten</option>
+							  </select>
+							  <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
+							</div>
+							<div class="checkbox">
+							  <label>
+								<input id="TSshow8" type="checkbox" checked="checked"/><i class="helper"></i>Batterieladezustand anstatt CH8
+							  </label>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
-			<div id="mqttheader">
-				<h3 class="headtitle">Private MQTT Client</h3>
-				<div class="pure-g">
-					<div class="pure-u-1-1 pure-u-lg-1-1">
-						<div class="1-box channel_conf">
-							<form>							
-							  <div class="checkbox">
-							    <label>
-								  <input id="PMQon" type="checkbox" checked="checked"/><i class="helper"></i>Private MQTT aktivieren
-							    </label>
-							  </div>
-							  <table class="table50" cellpadding="0" cellspacing="0" width="100%" border="0">
-								  <tr>
-								    <td>
-									  <div class="form-group">
-										  <input type="text" id="PMQhost" maxlength="26" required="required"/>
-										  <label class="control-label" for="input">MQTT Host</label><i class="bar"></i>
-									  </div>
-								    </td>
-								    <td>
-									  <div class="form-group">
-										  <input type="text" id="PMQport" maxlength="26" required="required"/>
-										  <label class="control-label" for="input">MQTT Port</label><i class="bar"></i>
-									  </div>
-								    </td>
-								  </tr>
-								  <tr>
-								    <td>
-									  <div class="form-group">
-										  <input type="text" id="PMQuser" maxlength="26" required="required"/>
-										  <label class="control-label" for="input">MQTT User</label><i class="bar"></i>
-									  </div>
-								    </td>
-								    <td>
-									  <div class="form-group">
-										  <input type="text" id="PMQpass" maxlength="26" required="required"/>
-										  <label class="control-label" for="input">MQTT Password</label><i class="bar"></i>
-									  </div>
-								    </td>
-								  </tr>
-								  <tr>
-								    <td>
-									  <div class="form-group">
-									    <select id="PMQinterval">
-										  <option value="10">10 Sekunden</option>
-										  <option value="30">30 Sekunden</option>
-										  <option value="60">1 Minute</option>
-										  <option value="120">2 Minuten</option>
-										  <option value="300">5 Minuten</option>
-									    </select>
-									    <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
-									  </div>
-								    </td>
-								    <td>	
-									  <div class="form-group">
-									    <select id="PMQqos">
-										  <option value="0">0</option>
-										  <option value="1">1</option>
-										  <option value="2">2</option>
-									    </select>
-									    <label class="control-label" for="select">QoS</label><i class="bar"></i>
-									  </div>
-								    </td>
-								  </tr>
-							  </table>
-							</form>
-						</div>
+			<h3 class="headtitle">Private MQTT Client</h3>
+			<div class="pure-g">
+				<div class="pure-u-1-1 pure-u-lg-1-1">
+					<div class="1-box channel_conf">
+						<form>							
+							<div class="checkbox">
+							  <label>
+								<input id="PMQon" type="checkbox" checked="checked"/><i class="helper"></i>Private MQTT aktivieren
+							  </label>
+							</div>
+							<table class="table50" cellpadding="0" cellspacing="0" width="100%" border="0">
+								<tr>
+								  <td>
+									<div class="form-group">
+										<input type="text" id="PMQhost" maxlength="26" required="required"/>
+										<label class="control-label" for="input">MQTT Host</label><i class="bar"></i>
+									</div>
+								  </td>
+								  <td>
+									<div class="form-group">
+										<input type="text" id="PMQport" maxlength="26" required="required"/>
+										<label class="control-label" for="input">MQTT Port</label><i class="bar"></i>
+									</div>
+								  </td>
+								</tr>
+								<tr>
+								  <td>
+									<div class="form-group">
+										<input type="text" id="PMQuser" maxlength="26" required="required"/>
+										<label class="control-label" for="input">MQTT User</label><i class="bar"></i>
+									</div>
+								  </td>
+								  <td>
+									<div class="form-group">
+										<input type="text" id="PMQpass" maxlength="26" required="required"/>
+										<label class="control-label" for="input">MQTT Password</label><i class="bar"></i>
+									</div>
+								  </td>
+								</tr>
+								<tr>
+								  <td>
+									<div class="form-group">
+									  <select id="PMQinterval">
+										<option value="10">10 Sekunden</option>
+										<option value="30">30 Sekunden</option>
+										<option value="60">1 Minute</option>
+										<option value="120">2 Minuten</option>
+										<option value="300">5 Minuten</option>
+									  </select>
+									  <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
+									</div>
+								  </td>
+								  <td>	
+									<div class="form-group">
+									  <select id="PMQqos">
+										<option value="0">0</option>
+										<option value="1">1</option>
+										<option value="2">2</option>
+									  </select>
+									  <label class="control-label" for="select">QoS</label><i class="bar"></i>
+									</div>
+								  </td>
+								</tr>
+							</table>
+						</form>
 					</div>
 				</div>
 			</div>
@@ -2625,16 +2621,6 @@
 			byId('CLtoken').innerHTML = "https://cloud.wlanthermo.de/index.html?api_token=" + jr.iot.CLtoken;			
 			byId("CLtoken").setAttribute("href", "https://cloud.wlanthermo.de/index.html?api_token=" + jr.iot.CLtoken);
 			byId('thingspeak').style.display = "inline";
-			advanced = jr.system.advanced;
-			if(advanced == true) {
-				byId('thingsheader').style.display = "inline";
-				byId('mqttheader').style.display = "inline";
-			}
-			else {
-				byId('thingsheader').style.display = "none";
-				byId('mqttheader').style.display = "none";
-			}
-			
 			showLoader('false');
 		})	
 	}	
