--- a/data/index.html
+++ b/data/index.html
@@ -2328,112 +2328,116 @@
 						</form>
 					</div>
 				</div>
-			</div>			
-			<h3 class="headtitle">Thingspeak</h3>
-			<div class="pure-g">
-				<div class="pure-u-1-1 pure-u-lg-1-1">
-					<div class="1-box channel_conf">
-						<form>							
-							<div class="checkbox">
-							  <label>
-								<input id="TSon" type="checkbox" checked="checked"/><i class="helper"></i>Thingspeak aktivieren
-							  </label>
-							</div>
-							<div class="form-group">
-							  <input type="text" id="TSwrite" maxlength="26" required="required"/>
-							  <label class="control-label" for="input">Channel Write API Key</label><i class="bar"></i>
-							</div>
-							<div class="form-group">
-							  <input type="text" id="TShttp" maxlength="26" required="required"/>
-							  <label class="control-label" for="input">ThingHTTP API Key</label><i class="bar"></i>
-							</div>
-							<div class="form-group">
-							  <input type="text" id="TSchID" maxlength="26" required="required"/>
-							  <label class="control-label" for="input">Channel ID</label><i class="bar"></i>
-							</div>
-							<div class="form-group">
-							  <select id="TSinterval">
-								<option value="30">30 Sekunden</option>
-								<option value="60">1 Minute</option>
-								<option value="120">2 Minuten</option>
-								<option value="300">5 Minuten</option>
-							  </select>
-							  <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
-							</div>
-							<div class="checkbox">
-							  <label>
-								<input id="TSshow8" type="checkbox" checked="checked"/><i class="helper"></i>Batterieladezustand anstatt CH8
-							  </label>
-							</div>
-						</form>
+			</div>		
+			<div id="thingsheader">
+				<h3 class="headtitle">Thingspeak</h3>
+				<div class="pure-g">
+					<div class="pure-u-1-1 pure-u-lg-1-1">
+						<div class="1-box channel_conf">
+							<form>							
+							  <div class="checkbox">
+							    <label>
+								  <input id="TSon" type="checkbox" checked="checked"/><i class="helper"></i>Thingspeak aktivieren
+							    </label>
+							  </div>
+							  <div class="form-group">
+							    <input type="text" id="TSwrite" maxlength="26" required="required"/>
+							    <label class="control-label" for="input">Channel Write API Key</label><i class="bar"></i>
+							  </div>
+							  <div class="form-group">
+							    <input type="text" id="TShttp" maxlength="26" required="required"/>
+							    <label class="control-label" for="input">ThingHTTP API Key</label><i class="bar"></i>
+							  </div>
+							  <div class="form-group">
+							    <input type="text" id="TSchID" maxlength="26" required="required"/>
+							    <label class="control-label" for="input">Channel ID</label><i class="bar"></i>
+							  </div>
+							  <div class="form-group">
+							    <select id="TSinterval">
+								  <option value="30">30 Sekunden</option>
+								  <option value="60">1 Minute</option>
+								  <option value="120">2 Minuten</option>
+								  <option value="300">5 Minuten</option>
+							    </select>
+							    <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
+							  </div>
+							  <div class="checkbox">
+							    <label>
+								  <input id="TSshow8" type="checkbox" checked="checked"/><i class="helper"></i>Batterieladezustand anstatt CH8
+							    </label>
+							  </div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
-			<h3 class="headtitle">Private MQTT Client</h3>
-			<div class="pure-g">
-				<div class="pure-u-1-1 pure-u-lg-1-1">
-					<div class="1-box channel_conf">
-						<form>							
-							<div class="checkbox">
-							  <label>
-								<input id="PMQon" type="checkbox" checked="checked"/><i class="helper"></i>Private MQTT aktivieren
-							  </label>
-							</div>
-							<table class="table50" cellpadding="0" cellspacing="0" width="100%" border="0">
-								<tr>
-								  <td>
-									<div class="form-group">
-										<input type="text" id="PMQhost" maxlength="26" required="required"/>
-										<label class="control-label" for="input">MQTT Host</label><i class="bar"></i>
-									</div>
-								  </td>
-								  <td>
-									<div class="form-group">
-										<input type="text" id="PMQport" maxlength="26" required="required"/>
-										<label class="control-label" for="input">MQTT Port</label><i class="bar"></i>
-									</div>
-								  </td>
-								</tr>
-								<tr>
-								  <td>
-									<div class="form-group">
-										<input type="text" id="PMQuser" maxlength="26" required="required"/>
-										<label class="control-label" for="input">MQTT User</label><i class="bar"></i>
-									</div>
-								  </td>
-								  <td>
-									<div class="form-group">
-										<input type="text" id="PMQpass" maxlength="26" required="required"/>
-										<label class="control-label" for="input">MQTT Password</label><i class="bar"></i>
-									</div>
-								  </td>
-								</tr>
-								<tr>
-								  <td>
-									<div class="form-group">
-									  <select id="PMQinterval">
-										<option value="10">10 Sekunden</option>
-										<option value="30">30 Sekunden</option>
-										<option value="60">1 Minute</option>
-										<option value="120">2 Minuten</option>
-										<option value="300">5 Minuten</option>
-									  </select>
-									  <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
-									</div>
-								  </td>
-								  <td>	
-									<div class="form-group">
-									  <select id="PMQqos">
-										<option value="0">0</option>
-										<option value="1">1</option>
-										<option value="2">2</option>
-									  </select>
-									  <label class="control-label" for="select">QoS</label><i class="bar"></i>
-									</div>
-								  </td>
-								</tr>
-							</table>
-						</form>
+			<div id="mqttheader">
+				<h3 class="headtitle">Private MQTT Client</h3>
+				<div class="pure-g">
+					<div class="pure-u-1-1 pure-u-lg-1-1">
+						<div class="1-box channel_conf">
+							<form>							
+							  <div class="checkbox">
+							    <label>
+								  <input id="PMQon" type="checkbox" checked="checked"/><i class="helper"></i>Private MQTT aktivieren
+							    </label>
+							  </div>
+							  <table class="table50" cellpadding="0" cellspacing="0" width="100%" border="0">
+								  <tr>
+								    <td>
+									  <div class="form-group">
+										  <input type="text" id="PMQhost" maxlength="26" required="required"/>
+										  <label class="control-label" for="input">MQTT Host</label><i class="bar"></i>
+									  </div>
+								    </td>
+								    <td>
+									  <div class="form-group">
+										  <input type="text" id="PMQport" maxlength="26" required="required"/>
+										  <label class="control-label" for="input">MQTT Port</label><i class="bar"></i>
+									  </div>
+								    </td>
+								  </tr>
+								  <tr>
+								    <td>
+									  <div class="form-group">
+										  <input type="text" id="PMQuser" maxlength="26" required="required"/>
+										  <label class="control-label" for="input">MQTT User</label><i class="bar"></i>
+									  </div>
+								    </td>
+								    <td>
+									  <div class="form-group">
+										  <input type="text" id="PMQpass" maxlength="26" required="required"/>
+										  <label class="control-label" for="input">MQTT Password</label><i class="bar"></i>
+									  </div>
+								    </td>
+								  </tr>
+								  <tr>
+								    <td>
+									  <div class="form-group">
+									    <select id="PMQinterval">
+										  <option value="10">10 Sekunden</option>
+										  <option value="30">30 Sekunden</option>
+										  <option value="60">1 Minute</option>
+										  <option value="120">2 Minuten</option>
+										  <option value="300">5 Minuten</option>
+									    </select>
+									    <label class="control-label" for="select">Sendeintervall</label><i class="bar"></i>
+									  </div>
+								    </td>
+								    <td>	
+									  <div class="form-group">
+									    <select id="PMQqos">
+										  <option value="0">0</option>
+										  <option value="1">1</option>
+										  <option value="2">2</option>
+									    </select>
+									    <label class="control-label" for="select">QoS</label><i class="bar"></i>
+									  </div>
+								    </td>
+								  </tr>
+							  </table>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -2621,6 +2625,8 @@
 			byId('CLtoken').innerHTML = "https://cloud.wlanthermo.de/index.html?api_token=" + jr.iot.CLtoken;			
 			byId("CLtoken").setAttribute("href", "https://cloud.wlanthermo.de/index.html?api_token=" + jr.iot.CLtoken);
 			byId('thingspeak').style.display = "inline";
+			byId('thingsheader').style.display = "inline";
+			byId('mqttheader').style.display = "inline";
 			showLoader('false');
 		})	
 	}	
@@ -2878,17 +2884,18 @@
 		showLoader('true');
 		loadJSON('data', '', '3000', function (response) {
 			jr = JSON.parse(response);
-			byId('pitmaster_typ').value = jr.pitmaster.typ;
+			pitID = 0;	// Pitmaster1
+			byId('pitmaster_typ').value = jr.pitmaster[pitID].typ;
 			clearOption('pitmaster_channel');
 			for (var i = 0; i < jr.channel.length; i++) {
 				byId('pitmaster_channel').options[byId('pitmaster_channel').options.length] = new Option('#' + jr.channel[i].number + ' - ' + jr.channel[i].name, jr.channel[i].number);
 			}
-			byId('pitmaster_channel').value = jr.pitmaster.channel;
-			byId('pitmaster_set').value = jr.pitmaster.set;
-			byId('pitmaster_value').value = jr.pitmaster.value;
+			byId('pitmaster_channel').value = jr.pitmaster[pitID].channel;
+			byId('pitmaster_set').value = jr.pitmaster[pitID].set;
+			byId('pitmaster_value').value = jr.pitmaster[pitID].value;
 			byId('pitmaster_settings').style.display = "inline";
 			showLoader('false');
-			showPitmasterProfile(jr.pitmaster.pid);
+			showPitmasterProfile(jr.pitmaster[pitID].pid);
 			changePitmasterTyp();
 		})
 	}
@@ -2935,11 +2942,12 @@
 		showLoader('true');
 		loadJSON('data', '', '3000', function (response) {
 			jr = JSON.parse(response);
-			jr.pitmaster.typ = byId('pitmaster_typ').value;
-			jr.pitmaster.channel = byId('pitmaster_channel').value;
-			jr.pitmaster.set = byId('pitmaster_set').value;
-			jr.pitmaster.value = byId('pitmaster_value').value
-			jr.pitmaster.pid = byId('pid_profile').value
+			pitID = 0;	// Pitmaster1
+			jr.pitmaster[pitID].typ = byId('pitmaster_typ').value;
+			jr.pitmaster[pitID].channel = byId('pitmaster_channel').value;
+			jr.pitmaster[pitID].set = byId('pitmaster_set').value;
+			jr.pitmaster[pitID].value = byId('pitmaster_value').value
+			jr.pitmaster[pitID].pid = byId('pid_profile').value
 			var data = JSON.stringify(jr.pitmaster);
 			loadJSON('setpitmaster', data, '60000', function (response) {
 				//alert(data);
@@ -3181,23 +3189,24 @@
 				byClass("wifi")[0].innerHTML = RSSIIcon;
 				var x = byClass("pure-u-1-1 pure-u-md-1-2 pure-u-xl-1-4 temp_index");
 				var i;
+				var pitID = 0;
 				var ch_count = 0;
 				for (i = 0; i < x.length; i++) {
 					x[i].getElementsByClassName('1-box channel')[0].style.borderColor = jr.channel[i].color;
 					x[i].getElementsByClassName('chtitle')[0].innerHTML = jr.channel[i].name;
-					if(jr.pitmaster.typ == 'auto' || jr.pitmaster.typ == 'autotune'){
-						if (jr.pitmaster.channel == jr.channel[i].number){
-							var a = getIcon('uniF2C7') + jr.pitmaster.set + '°' + ' / ';
-							var e = ' ' + jr.pitmaster.value + '%';
-							if(jr.pitmaster.value == '0'){
-								x[i].getElementsByClassName('chtitle')[0].innerHTML = a + getIcon('fan') + ' ' + jr.pitmaster.value + '%';
-							}else if (jr.pitmaster.value <= '25'){
+					if(jr.pitmaster[pitID].typ == 'auto' || jr.pitmaster[pitID].typ == 'autotune'){
+						if (jr.pitmaster[pitID].channel == jr.channel[i].number){
+							var a = getIcon('uniF2C7') + jr.pitmaster[pitID].set + '°' + ' / ';
+							var e = ' ' + jr.pitmaster[pitID].value + '%';
+							if(jr.pitmaster[pitID].value == '0'){
+								x[i].getElementsByClassName('chtitle')[0].innerHTML = a + getIcon('fan') + ' ' + jr.pitmaster[pitID].value + '%';
+							}else if (jr.pitmaster[pitID].value <= '25'){
 								x[i].getElementsByClassName('chtitle')[0].innerHTML = a + getIcon('fan icon-rotate-25') + e;
-							}else if (jr.pitmaster.value <= '50'){
+							}else if (jr.pitmaster[pitID].value <= '50'){
 								x[i].getElementsByClassName('chtitle')[0].innerHTML = a + getIcon('fan icon-rotate-50') + e;
-							}else if (jr.pitmaster.value <= '75'){
+							}else if (jr.pitmaster[pitID].value <= '75'){
 								x[i].getElementsByClassName('chtitle')[0].innerHTML = a + getIcon('fan icon-rotate-75') + e;
-							}else if (jr.pitmaster.value <= '100'){
+							}else if (jr.pitmaster[pitID].value <= '100'){
 								x[i].getElementsByClassName('chtitle')[0].innerHTML = a + getIcon('fan icon-rotate-100') + e;
 							}
 						}else{
