--- a/data/index.html
+++ b/data/index.html
@@ -2099,15 +2099,15 @@
 									<tr>
 									  <td>
 										<div class="form-group">
-										  <input type="text" id="pid_DCmin" maxlength="3" onkeyup="validateNumber(this,'1');" required="required"/>
-										  <label class="control-label" for="input">DCmin</label><i class="bar"></i>
+										  <input type="text" id="pid_DCmin" maxlength="4" onkeyup="validateNumber(this,'1');" required="required"/>
+										  <label class="control-label" for="input">DCmin [0-100%]</label><i class="bar"></i>
 										  <span class="icon-play icon-input" onclick="setDC('0');"></span>
 										</div>
 									  </td>
 									  <td>	
 										<div class="form-group">
-										  <input type="text" id="pid_DCmax" maxlength="3" onkeyup="validateNumber(this,'1');" required="required"/>
-										  <label class="control-label" for="input">DCmax</label><i class="bar"></i>
+										  <input type="text" id="pid_DCmax" maxlength="4" onkeyup="validateNumber(this,'1');" required="required"/>
+										  <label class="control-label" for="input">DCmax [0-100%]</label><i class="bar"></i>
 										  <span class="icon-play icon-input" onclick="setDC('1');"></span>
 										</div>							  
 									  </td>
@@ -2627,6 +2627,7 @@
 			byId('thingspeak').style.display = "inline";
 			byId('thingsheader').style.display = "inline";
 			byId('mqttheader').style.display = "inline";
+			
 			showLoader('false');
 		})	
 	}	
@@ -2804,6 +2805,21 @@
 				updateActivated = 'false';
 				byClass("notification")[0].style.display = "none";
 				location.reload(true);
+			}
+		})	
+	}
+	
+	var dcActivated = 'false';
+	
+	function checkDCActivated(){
+		loadJSON('dcstatus', '', '3000', function (response) {
+			jr = JSON.parse(response);
+			if (jr == true){
+				showLoader('true');
+			}else if (jr == false){
+				showLoader('false')
+				dcActivated = 'false';
+				//byClass("notification")[0].style.display = "none";
 			}
 		})	
 	}
@@ -3030,14 +3046,16 @@
 		}else{
 			var_val = byId('pid_DCmax').value;
 		}
-		txt = 'Soll der Pitmasterausgang für 10Sekunden mit ' + var_val + '% angesteuert werden?';
+		txt = 'Soll der Pitmasterausgang für 10 Sekunden mit ' + var_val + '% angesteuert werden?';
 		if (confirm(txt) == true) {
-			showLoader('true');
+			//showLoader('true');
 			data = '?aktor=' + byId('pitmaster_profile_aktor').value + '&dc=' + dc + '&val=' + var_val;
 			loadJSON('setDC' + data, '', '60000', function (response) {
 				//alert(data);
+				showLoader('true');
+				dcActivated = 'true';
 			})	
-			showLoader('false');
+			//showLoader('false');
 		} else {
 
 		}		
@@ -3180,6 +3198,8 @@
 	function readTemp(){
 		if (updateActivated == 'true'){
 				checkUpdateActivated();
+		}else if (dcActivated == 'true') {
+				checkDCActivated();
 		}else{
 			loadJSON('data', '', '3000', function (response) {
 				jr = JSON.parse(response);
