--- a/data/index.html
+++ b/data/index.html
@@ -75,7 +75,12 @@
 .icon-remove:before {content: "\f00d";}
 .icon-refresh:before {content: "\f021";}
 .icon-lock:before {content: "\f023";}
-.icon-question_sign:before {content: "\f059";}
+
+.icon-question_sign:before {
+	content: "\f059";
+	color:#FFFFFF;
+}
+
 .icon-info_sign:before {content: "\f05a";}
 .icon-notification:before {
   content: "\f06a";
@@ -1760,7 +1765,76 @@
 		}
 		.table_nav tr td span{
 			cursor: pointer;
-		}		
+		}	
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 2; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}		
     </style>
 </head>
 <body>
@@ -2293,6 +2367,22 @@
 			</div>
         </div>
 		<!-- ################################################### -->
+		 <!-- Trigger/Open The Modal -->
+
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h2>Nano Cloud - Anleitung</h2>
+    </div>
+    <div class="modal-body">
+      <p>Blablabla das ist die Nano Cloud blablabla</p>
+    </div>
+  </div>
+
+</div>
 		<div id="thingspeak" class="content" style="display:none">
 			<table class="table_nav" cellpadding="0" cellspacing="0" width="100%" border="0">
 				<tr>
@@ -2300,7 +2390,7 @@
 				  <td><span onclick="setThingspeak();">Speichern<span class="icon-arrow_right"></span></span></td>
 				</tr>
 			</table>
-			<h3 class="headtitle">Nano Cloud</h3>
+			<h3 class="headtitle">Nano Cloud<span onclick="showModal();" style="text-align:right;" class="icon-question_sign"></span></h3>
 			<div class="pure-g">
 				<div class="pure-u-1-1 pure-u-lg-1-1">
 					<div class="1-box channel_conf">
@@ -3378,6 +3468,33 @@
         }
 	}
 	readTemp();
+	
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal
+
+function showModal(){
+	modal.style.display = "block";
+}
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+} 	
+
 </script>
 
 </body>
