HelpBox - positionierung des Icon

--- a/data/index.html
+++ b/data/index.html
@@ -81,7 +81,6 @@
 	color:#FFFFFF;
 	font-size: 1.17em;
 	margin-right:4px;
-	margin-bottom:0px;
 }
 
 .icon-info_sign:before {content: "\f05a";}
@@ -1840,6 +1839,7 @@
 }	
 .text-align-right {
 	text-align:right;
+	margin-top:4px;
 }
 .text-align-left {
 	text-align:left;
